--- a/templates/new/details.html.twig
+++ b/templates/new/details.html.twig
@@ -7,6 +7,8 @@
     <link href = "{{asset('bootstrap/css/bootstrap.min.css')}}" rel="stylesheet"/>
     <link href="{{ asset('css/style1.css') }}" rel="stylesheet">
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<link href="{{ asset('css/fontawesome-free/css/all.min.css') }}" rel="stylesheet">
+
 
     </head>
 
@@ -24,7 +26,7 @@
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="{{ path('get_subscription_form') }}">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">About</a>
@@ -66,7 +68,7 @@
                       <td>{{productCart.product.price * productCart.quantity}}</td>
                       <td>
                           <a href="{{path('cart_remove', {'id': productCart.id}) }}" class= "trash">
-                              <i class = "fas fa-trash" style = "color:white;"></i>
+                              <i class = "fas fa-trash" style = "color:black;"></i>
                           </a>
                       </td>
 
