--- a/templates/new/search_products.html.twig
+++ b/templates/new/search_products.html.twig
@@ -19,7 +19,7 @@
 
   <header>
         <div class="topnav">
-            <a class="active" href="#home">Home</a>
+            <a class="active" href="{{ path('get_subscription_form') }}">Home</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
         </div>
